--- a/style/style.css
+++ b/style/style.css
@@ -8,16 +8,13 @@
 .title {
   width: 100%;
   height: 50vh;
-  background-image: url(/image/totem-1.png);
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
-.title .text {
+.title .container-fluid .text {
   text-align: center;
 }
 
-.title .text p {
+.title .container-fluid .text p {
   text-align: center;
 }
 
@@ -30,5 +27,9 @@ footer {
 footer .text {
   text-align: center;
   color: blanchedalmond;
+}
+
+.pic {
+  background-color: blanchedalmond;
 }
 /*# sourceMappingURL=style.css.map */
