--- a/style/style.scss
+++ b/style/style.scss
@@ -6,12 +6,13 @@
 .title {
   width: 100%;
   height: 50vh;
-  background-image: url(/image/totem-1.png);
-  object-fit: cover;
-  .text {
-    text-align: center;
-    p {
+  .container-fluid {
+    // position: absolute;
+    .text {
       text-align: center;
+      p {
+        text-align: center;
+      }
     }
   }
 }
@@ -23,4 +24,7 @@ footer {
     text-align: center;
     color: blanchedalmond;
   }
+}
+.pic {
+  background-color: blanchedalmond;
 }
