--- a/style/Boostrapscss/bootstrap.css
+++ b/style/Boostrapscss/bootstrap.css
@@ -11598,53 +11598,4 @@ fieldset:disabled .btn {
     display: none !important;
   }
 }
-
-.index {
-  width: 500px;
-}
-
-.faq {
-  color: blue;
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.title {
-  width: 100%;
-  height: 50vh;
-}
-
-.title .container-fluid .text, .title .container-sm .text, .title .container-md .text, .title .container-lg .text, .title .container-xl .text, .title .container-xxl .text {
-  text-align: center;
-}
-
-.title .container-fluid .text p, .title .container-sm .text p, .title .container-md .text p, .title .container-lg .text p, .title .container-xl .text p, .title .container-xxl .text p {
-  text-align: center;
-}
-
-footer {
-  width: 100%;
-  height: 20vh;
-  background-color: black;
-}
-
-footer .text {
-  text-align: center;
-  color: blanchedalmond;
-}
-
-.pic {
-  background-color: blanchedalmond;
-}
-
-.btn-primary-hover:hover {
-  background-color: burlywood;
-  color: #97ccba;
-  border: 1px solid burlywood;
-}
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=bootstrap.css.map */
