--- a/style/style.scss
+++ b/style/style.scss
@@ -40,3 +40,9 @@ footer {
 .carousel-inner{
   height:300px;
 }
+.bgimg{
+  background-image: url('../image/totem-1.png');
+  background-position:100% 100%;
+  background-repeat: no-repeat;
+  background-size:cover;
+}
